@@ -1,2 +1,7 @@
 # Year-1-Project-Battleship
-Battleship game made using JavaFX
+Battleship game made using JavaFX so make sure you installed the latest JavaFX SDK (currently tested with 19.0.2.1)
+
+To run the jar file type:
+java "your JavaFX path/lib" --add-modules javafx.controls,javafx.fxml -jar Battleship.jar
+
+e.g. java --module-path "C:\Users\swaro\Documents\programming\Java\javafx-sdk-19.0.2.1\lib" --add-modules javafx.controls,javafx.fxml -jar Battleship.jar
